--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Validate environment input
         id: validate
         run: |
-          if '${{ github.event_name }}' == 'workflow_dispatch' || '${{ github.event_name }}' == 'workflow_call'; then
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" || "${{ github.event_name }}" == "workflow_call" ]]; then
             ENVIRONMENT="${{ inputs.environment }}"
           else
             ENVIRONMENT="local"
@@ -65,14 +65,14 @@ jobs:
       - name: Set versions
         id: set-versions
         run: |
-          if '${{ needs.validate-environment.outputs.environment }}' == 'staging'; then
+          if [[ "${{ needs.validate-environment.outputs.environment }}" == "staging" ]]; then
             NPM_PACKAGE_VERSION=$(npm view @compass-labs/api-sdk versions --json | jq -r '.[]' | grep -E 'rc|alpha|beta' | sort -V | tail -1)
             UV_PACKAGE_VERSION="$(curl -s https://pypi.org/pypi/compass-api-sdk/json | jq -r '.releases | keys | .[]' | grep -E 'rc|a|b|dev' | sort -V | tail -1)"
             SERVER_URL="https://dev-api.compasslabs.ai"
           else
             NPM_PACKAGE_VERSION="latest"
             UV_PACKAGE_VERSION="latest"
-            if '${{ needs.validate-environment.outputs.environment }}' == 'production'; then
+            if [[ "${{ needs.validate-environment.outputs.environment }}" == "production" ]]; then
               SERVER_URL="https://api.compasslabs.ai"
             else
               SERVER_URL="http://localhost:8000"
