--- a/.github/workflows/test_sdk_snippets.yml
+++ b/.github/workflows/test_sdk_snippets.yml
@@ -30,7 +30,7 @@ jobs:
 
       - id: collect
         name: Collect endpoints (writes items=... to $GITHUB_OUTPUT)
-        working-directory: v1/test_sdk_snippets/python
+        working-directory: v1/test_sdk_snippets
         run: uv run python discover_endpoints.py
 
       - name: Print collected items
@@ -61,11 +61,11 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets/python
+        working-directory: v1/test_sdk_snippets
         run: uv sync
 
       - name: Run endpoint snippet
-        working-directory: v1/test_sdk_snippets/python
+        working-directory: v1/test_sdk_snippets
         run: uv run python run_endpoint.py
         env:
           ENDPOINT: ${{ matrix.item }}
@@ -90,7 +90,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies (uv)
-        working-directory: v1/test_sdk_snippets/typescript
+        working-directory: v1/test_sdk_snippets
         run: uv sync
 
       - name: Setup Node.js
@@ -99,7 +99,7 @@ jobs:
           node-version: '20'
 
       - name: Install Node deps for TS snippets
-        working-directory: v1/test_sdk_snippets/typescript
+        working-directory: v1/test_sdk_snippets
         run: |
           npm init -y >/dev/null 2>&1 || true
           npm i -D tsx
@@ -107,7 +107,7 @@ jobs:
           npm i @compass-labs/api-sdk
 
       - name: Run endpoint snippet
-        working-directory: v1/test_sdk_snippets/typescript
+        working-directory: v1/test_sdk_snippets
         run: uv run python run_endpoint_ts.py
         env:
           ENDPOINT: ${{ matrix.item }}
