--- a/.github/workflows/test_sdk_snippets.yml
+++ b/.github/workflows/test_sdk_snippets.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
-        run: uv run python run_endpoint.py
+        run: uv run python run_endpoint_python.py
         env:
           ENDPOINT: ${{ matrix.item }}
 
@@ -108,6 +108,6 @@ jobs:
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
-        run: uv run python run_endpoint_ts.py
+        run: uv run python run_endpoint_typescript.py
         env:
           ENDPOINT: ${{ matrix.item }}
