--- a/.github/workflows/test_usecases_v0.yml
+++ b/.github/workflows/test_usecases_v0.yml
@@ -1,23 +1,23 @@
-name: test_usecases_v_zero
+# name: test_usecases_v_zero
 
-on:
-  schedule:
-    # Runs at 00:00 UTC every day
-    - cron: "0 0 * * *"
-  pull_request:
-     branches:
-       - main
-  workflow_dispatch:
+# on:
+#   schedule:
+#     # Runs at 00:00 UTC every day
+#     - cron: "0 0 * * *"
+#   pull_request:
+#      branches:
+#        - main
+#   workflow_dispatch:
 
-permissions:
-  id-token: write
-  contents: write
+# permissions:
+#   id-token: write
+#   contents: write
 
-jobs:
-  do-nothing:
-    runs-on: ubuntu-latest
+# jobs:
+#   do-nothing:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Do nothing
-        run: |
-          echo "I am doing nothing"
+#     steps:
+#       - name: Do nothing
+#         run: |
+#           echo "I am doing nothing"
