--- a/.github/workflows/simple_test.yaml
+++ b/.github/workflows/simple_test.yaml
@@ -24,6 +24,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Test
-        run: echo "Hello World"
+      - uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install uv
+        run: pip install uv
+      - name: Install dependencies
+        run: |
+          cd test
+          uv sync
+      - name: Run test
+        run: |
+          cd test
+          uv run python main.py
         
