--- a/.github/workflows/simple_test.yaml
+++ b/.github/workflows/simple_test.yaml
@@ -21,12 +21,19 @@ env:
 
 
 jobs:
-  test:
+  print-env:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - name: Print environment parameter
-        run: echo "Environment parameter: ${{ inputs.environment }}"
+        run: |
+          echo "Environment parameter: ${{ github.event.inputs.environment }}"
+          echo "Workflow triggered with environment: ${{ github.event.inputs.environment || 'default' }}"
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: print-env
+    steps:
+      - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
